# DZL_CMAKE_Template

./: README.md
SingleHeader/: CMakeLists.txt  README.md
SingleHeader/cmake/: MSVCVer.cmake
SingleHeader/inc/: DZL_Log.h
SingleHeader/src/: CMakeLists.txt
SingleHeader/src/demo/: CMakeLists.txt  demo.cpp
